# c_project

./: Application.c  Application.h  Student_database.c  Student_database.h  admin.c  admin.h  edit.c  edit.h  file_access.h  main.c  memory_managment.c  student.c  student.h  student_database.c  student_database.h
Application/: admin.c  admin.h  authentication.c  authentication.h  student.c  student.h
Data_access_layer/: data_managment.c  file_access.c  memory_managment.h
c__project/: CMakeLists.txt  admin.c  authintication.c  data_managment.c  data_managment.h  file_access.c  file_access.h  input and output.c  input and output.h  memory_managment.c  memory_managment.h  menu.c  menu.h  student.c  student.h
interface/: input and output.c  input and output.h  menu.c  menu.h
